[gd_scene load_steps=17 format=2]

[ext_resource path="res://art/HUD/exp_bar_under.png" type="Texture" id=1]
[ext_resource path="res://art/HUD/exp_bar_over.png" type="Texture" id=2]
[ext_resource path="res://art/HUD/exp_bar_filled.png" type="Texture" id=3]
[ext_resource path="res://HUD/HUD.gd" type="Script" id=4]
[ext_resource path="res://bcs.shader" type="Shader" id=6]
[ext_resource path="res://art/PatuaOne-Regular.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://art/BerkshireSwash-Regular.ttf" type="DynamicFontData" id=8]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 6 )
shader_param/brightness = 1.0
shader_param/contrast = 2.0
shader_param/saturation = 1.0

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 7 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.705882, 0.54902, 1, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.352941, 0.27451, 0.705882, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.643137, 0.556863, 1, 1 )

[sub_resource type="DynamicFont" id=7]
size = 24
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=8]
size = 32
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=9]
size = 28
font_data = ExtResource( 7 )

[node name="HUD" type="CanvasLayer"]
layer = -1
script = ExtResource( 4 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="screen_stat" type="ColorRect" parent="CanvasLayer"]
material = SubResource( 1 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 300
custom_constants/margin_top = 150
custom_constants/margin_left = 300
custom_constants/margin_bottom = 150
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer"]
margin_left = 300.0
margin_top = 150.0
margin_right = 724.0
margin_bottom = 450.0

[node name="Label" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer"]
margin_left = 108.0
margin_top = 43.0
margin_right = 316.0
margin_bottom = 104.0
size_flags_horizontal = 4
size_flags_vertical = 6
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "PAUSED"

[node name="resume_button" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer"]
margin_left = 150.0
margin_top = 203.0
margin_right = 273.0
margin_bottom = 249.0
focus_mode = 0
size_flags_horizontal = 4
size_flags_vertical = 6
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_disabled = Color( 0.784314, 0.784314, 0.784314, 1 )
custom_colors/font_color = Color( 0.196078, 0.196078, 0.196078, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0.392157, 0.392157, 0.392157, 1 )
enabled_focus_mode = 0
text = "Resume"
flat = true

[node name="CanvasLayer2" type="CanvasLayer" parent="."]
layer = 2

[node name="pause_button" type="Button" parent="CanvasLayer2"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 970.0
margin_top = 20.0
margin_right = 1007.0
margin_bottom = 56.0
focus_mode = 0
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
custom_fonts/font = SubResource( 7 )
enabled_focus_mode = 0
text = " P "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cutscene" type="TextureRect" parent="CanvasLayer2"]
anchor_right = 1.0
anchor_bottom = 1.0
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer3" type="CanvasLayer" parent="."]
layer = 3

[node name="transition" type="ColorRect" parent="CanvasLayer3"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="CanvasLayer3/transition"]

[node name="HBoxContainer" type="HBoxContainer" parent="."]
modulate = Color( 1, 0.447059, 0, 0 )
margin_left = 50.0
margin_top = 40.0
margin_right = 306.0
margin_bottom = 56.0
rect_scale = Vector2( 3.5, 2 )
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="neg_experience" type="TextureProgress" parent="HBoxContainer"]
margin_right = 128.0
margin_bottom = 16.0
texture_under = ExtResource( 1 )
texture_over = ExtResource( 2 )
texture_progress = ExtResource( 3 )
fill_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pos_experience" type="TextureProgress" parent="HBoxContainer"]
margin_left = 128.0
margin_right = 256.0
margin_bottom = 16.0
texture_under = ExtResource( 1 )
texture_over = ExtResource( 2 )
texture_progress = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="HBoxContainer"]

[node name="endgame_panel" type="MarginContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 100
custom_constants/margin_top = 50
custom_constants/margin_left = 100
custom_constants/margin_bottom = 150
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="endgame_panel"]
margin_left = 100.0
margin_top = 50.0
margin_right = 924.0
margin_bottom = 450.0

[node name="Label" type="Label" parent="endgame_panel/VBoxContainer"]
margin_left = 6.0
margin_top = 91.0
margin_right = 817.0
margin_bottom = 264.0
size_flags_horizontal = 4
size_flags_vertical = 6
custom_fonts/font = SubResource( 8 )
text = "I ran with what God planted in my heart, and I understand it
To bring the light to the dark, breathe some life in this art
This must be the truth (why?) 'cause we keep marchin' on.
- Talib Kweli"
align = 1
valign = 1

[node name="game_finish" type="Button" parent="endgame_panel/VBoxContainer"]
margin_top = 359.0
margin_right = 824.0
margin_bottom = 400.0
custom_fonts/font = SubResource( 9 )
text = "Return"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="CanvasLayer/MarginContainer/VBoxContainer/resume_button" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="CanvasLayer2/pause_button" to="." method="_on_pause_button_pressed"]
[connection signal="tween_completed" from="HBoxContainer/Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="pressed" from="endgame_panel/VBoxContainer/game_finish" to="." method="_on_game_finish_pressed"]
